# nirvana-term

./: .gitignore  Cargo.toml  README.md  tombi.toml
.zed/: settings.json
crates/nirvana/: Cargo.toml
crates/nirvana-core/: Cargo.toml
crates/nirvana-core/src/: config.rs  lib.rs  paths.rs
crates/nirvana-core/src/api/: connection.rs  delete.rs  domain.rs  errors.rs  info.rs  mod.rs  publish.rs  slots.rs  tracking.rs
crates/nirvana-core/src/credentials/: mod.rs
crates/nirvana-core/src/integration/: jira.rs  mod.rs
crates/nirvana-core/src/storage/: connection_repo.rs  mod.rs  slot_repo.rs  ticket_repo.rs
crates/nirvana-core/src/storage/migrations/: 0001_init.sql  0002_tickets_slots.sql
crates/nirvana-gui/src/: App.vue
crates/nirvana-gui/src-tauri/: Cargo.toml
crates/nirvana-gui/src-tauri/src/: lib.rs
crates/nirvana-gui/src/components/modals/: EditTaskModal.vue
crates/nirvana-gui/src/composables/: dateTimeInputs.ts  useEditTaskModal.ts  useStartTaskModal.ts
crates/nirvana-gui/src/layout/: Footer.vue
crates/nirvana-gui/src/page/: ConnectionSetup.vue
crates/nirvana-gui/src/stores/: allTasks.ts  connections.ts
crates/nirvana-gui/src/types/: types.ts
crates/nirvana/src/: main.rs
crates/nirvana/src/cli/: connection.rs  delete.rs  info.rs  list.rs  mod.rs  publish.rs  start.rs  stop.rs  time.rs
crates/nirvana/src/tui/: mod.rs
scripts/jira/: .env.example  get_issue_summary.sh  publish_time_tracking.sh
