[package]
name = "nirvana"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
crossterm = "0.29.0"
dialoguer = "0.12.0"
nirvana-core = { path = "../nirvana-core" }
ratatui = "0.30.0"
